--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -640,7 +640,8 @@ pre {
 .site-footer {
   border-top: 1px solid #e8e8e8;
   padding: 30px 0;
-  text-align: center; }
+  text-align: center;
+  font-family: Helvetica; }
 
 .footer-heading {
   font-size: 18px;
