--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Feel free to fork this for personal use :)</h2>
+    <h2 class="footer-heading">Feel free to clone this for personal use :)</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
